--- a/html/internals.html
+++ b/html/internals.html
@@ -469,7 +469,7 @@ or do the following to add support directly to the core library:
 <OL>
 <LI>Define the tag value in <B>tiff.h</B>.
 <LI>Edit the file <B>tif_codec.c</B> to add an entry to the
-   _TIFFBuiltinCODECS array (see how other algorithms are handled).
+   _NDPIBuiltinCODECS array (see how other algorithms are handled).
 <LI>Add the appropriate function prototype declaration to
    <B>tiffiop.h</B> (close to the bottom).
 <LI>Create a file with the compression scheme code, by convention files
