--- a/html/v3.7.0alpha.html
+++ b/html/v3.7.0alpha.html
@@ -115,7 +115,7 @@ The following information is located here:
 	<a href="http://bugzilla.remotesensing.org/show_bug.cgi?id=508"
 		http://bugzilla.remotesensing.org/show_bug.cgi?id=508</a>.
 
-	<li> libtiff/tif_codec.c: Fixed typo in TIFFInitPackBits name as per:
+	<li> libtiff/tif_codec.c: Fixed typo in NDPIInitPackBits name as per:
 	<a href="http://bugzilla.remotesensing.org/show_bug.cgi?id=494">
 		http://bugzilla.remotesensing.org/show_bug.cgi?id=494</a>.
 
